--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <section class="container-fluid" id="container">
         <div class="image-container">
-            <img src="/assets/logo.png" alt="Logo" class="logo">
+            <img src="assets/logo.png" alt="Logo" class="logo">
         </div>
         <div class="login-container">
             <form id="loginForm" onsubmit="return validateForm()">
